--- a/musicNotes/styles.css
+++ b/musicNotes/styles.css
@@ -54,16 +54,29 @@ select {
   border-radius: 12px;
 }
 
+.individualNotes{
+  border: 2px solid black;
+  padding:6px;
+  border-radius: 10px;
+  white-space: nowrap;
+}
+
 @media (min-width: 800px){
   h1,h2{
     margin: 25px 0;
   }
   #scaleHolder{
-    font-size: 3em;
+    font-size: 2em;
     width:80%;
     margin: 50px auto;
     flex-direction: row;
     justify-content: space-around;
     
+  }
+}
+@media (min-width: 1000px){
+  #scaleHolder{
+    font-size: 3em;
+    width:70%;
   }
 }
